<resources>
    <string name="app_name">Trash Explorer</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">show password</string>
    <string name="sign_in_title">Sign in</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading</string>
    <string name="sign_up">Don\'t have an account? <u>Sign up</u></string>
    <string name="network_error">Network not found! Please check your connection</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="cpassword">Confirm Password</string>
    <string name="sign_in">Already have an account? <u>Sign in</u></string>
    <string name="report">Report</string>
    <string name="profile">Profile</string>
    <string name="menu">MENU</string>
    <string name="username_tv">Username:</string>
    <string name="email_tv">Email:</string>
    <string name="register_date">Register date:</string>
    <string name="reports">Reports:</string>
    <string name="zero_report">You don\'t have reports.</string>
    <string name="filter">0,1,2,3,4,5,6,7,8,9,aábcdeéfghiíjklmnoóöőpqrstuúüűvwxyzAÁBCDEÉFGHIÍJKLMNOÓÖŐPQRSTUÚÜŰVWXYZ</string>
    <string name="old_pw">Old Password</string>
    <string name="new_pw">New Password</string>
    <string name="confirm_new_pw">Confirm new password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="change_your_password">Change your password!</string>
    <string name="password_change">Change your password</string>
    <string name="my_reports">My Reports</string>
    <string name="logout">Logout</string>
    <string name="send_report">Send report!</string>
    <string name="locate_me">Locate me!</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCl7H6eYDEwvlo_FkIx_v4hONjhzN2ZDMI
    </string>
    <string name="gps_needed">GPS needed.</string>
    <string name="send">Send</string>
    <string name="description">Type the Description here!</string>
    <string name="check_the_gps_connection">Please check your GPS connection.</string>
    <string name="selectMode">Select the mode:</string>
    <string name="users">Users</string>
    <string name="del_report">Are you sure you want to delete this item?</string>


    <!--Dialog text's-->
    <string name="wait">Please wait…</string>
    <string name="success">Success</string>
    <string name="oops">Oops…</string>
    <string name="wrong">Sorry, something went wrong! \n Please try again later…</string>
    <string name="warning">Attention!</string>
    <string name="yes">Yes</string>
    <string name="no_coord">There was no GPS coordinate for the announcement.</string>

</resources>
