<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_your_password"
        style="@style/ProfileText"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/oldPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_pw"
            android:inputType="textPassword"
            android:longClickable="false"/>
        <ImageView
            android:id="@+id/soldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/show_password"
            android:src="@drawable/ic_eye" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/newPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_pw"
            android:inputType="textPassword"
            android:longClickable="false"/>
        <ImageView
            android:id="@+id/snewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/show_password"
            android:src="@drawable/ic_eye" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/cPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_pw"
            android:inputType="textPassword"
            android:longClickable="false"/>
        <ImageView
            android:id="@+id/scPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/show_password"
            android:src="@drawable/ic_eye" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>