<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_bg"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context="balint.andor.trashexplorer.RegActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/HeaderText"
                android:text="@string/sign_up_title" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/username"
                android:inputType="text"
                android:longClickable="false"
                android:digits="@string/filter"
                android:background="@drawable/edit_text_background"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:longClickable="false"
                android:background="@drawable/edit_text_background"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:background="@drawable/edit_text_background"/>

                <ImageView
                    android:id="@+id/showPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/show_password"
                    android:src="@drawable/ic_eye"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/cpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpassword"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:background="@drawable/edit_text_background"/>

                <ImageView
                    android:id="@+id/cshowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/show_password"
                    android:src="@drawable/ic_eye"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"/>
            </RelativeLayout>

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_title"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                custom:pb_colorNormal="@color/blue_normal"
                custom:pb_colorPressed="@color/blue_pressed" />

            <TextView
                android:id="@+id/backLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
