<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="balint.andor.trashexplorer.MenuActivity"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="32dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                style="@style/HeaderText"
                android:textAlignment="center"/>
                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/reportButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/report"
                    style="@style/MenuButton"
                    android:drawableStart="@mipmap/ic_report"/>
                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/profileButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:drawableStart="@mipmap/ic_profile"
                    style="@style/MenuButton"/>
        </LinearLayout>
</ScrollView>
