<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_bg"

    android:orientation="vertical"
    tools:context="balint.andor.trashexplorer.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="32dp">

                <TextView
                    android:id="@+id/headerText"
                    style="@style/HeaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_title" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="128sp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="32sp"
                    android:layout_marginTop="16sp"
                    android:src="@mipmap/ic_launcher" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:longClickable="false" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:longClickable="false" />

                    <ImageView
                        android:id="@+id/showPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/show_password"
                        android:paddingEnd="5dp"
                        android:paddingTop="5dp"
                        android:src="@drawable/ic_eye" />
                </RelativeLayout>

                <CheckBox
                    android:id="@+id/dataCB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/save_data" />

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/signIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/sign_in_title"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    custom:pb_colorNormal="@color/blue_normal"
                    custom:pb_colorPressed="@color/blue_pressed" />

                <TextView
                    android:id="@+id/signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
